<resources>
    <string name="app_name">AdminOderFood</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="name_app">Wases Of Food</string>
    <string name="duck_pro">Design by\nDuck</string>
    <string name="login_to_your_admin_dashboard">Login To Your\n Admin Dashboard</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="design_by_duck">Design by\n Duck</string>
    <string name="login">Login</string>
    <string name="sign_up_text">Sign Up Here For Your \nAdmin Dashboard</string>
    <string name="already_text">Already Have An Account?</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="name_of_owner">Name Of Owner</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="create_account">Create Account</string>
    <string name="pending_oder">Pending Oder</string>
    <string name="pending_text">30</string>
    <string name="completed_order">Completed \norder</string>
    <string name="completed_text">10</string>
    <string name="whole_time_nearning">Whole Time\nEarning</string>
    <string name="whole_text">100$</string>
    <string name="todo">TODO</string>
    <string name="all_item_menu">All Item Menu</string>
    <string name="add_menu">Add Menu</string>
    <string name="log_out">Log out</string>
    <string name="oder_d_path">Oder Dípath</string>
    <string name="profile">Profile</string>
    <string name="create_new_user">Create New User</string>
    <string name="add_item">Add Item</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="enter_food_price">Enter Food Price</string>
    <string name="select_image">Select Image</string>
    <string name="short_description">Short Description</string>
    <string name="description_text">Lorem ipsum dolor sit amet,\n consectetur adipiscing elit</string>
    <string name="ingredients">Ingredients</string>
    <string name="text_ingredients">- Noodle\n- Salad\n - Burger</string>
    <string name="all_item">All Item</string>
    <string name="name_item">Spacy Fresh Crash</string>
    <string name="price_item">15$</string>
    <string name="quantity">10</string>
    <string name="out_for_delivery">Out For Delivery</string>
    <string name="custemor_name">Custemor Name</string>
    <string name="payment">Payment</string>
    <string name="delivered">Delivered</string>
    <string name="not_received">Not Received</string>
    <string name="customer_name">Customer Name</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="lorem_input">lorem input</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="minh_khai_bac_tu_liem">Minh Khai, Bac Tu Liem</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="number_phone">1234567</string>
    <string name="hint_Password">**********</string>
    <string name="save_information">Save Information</string>
    <string name="click_here_to_edit">Click Here To Edit</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="create_new_user_admin">Create New User Admin</string>
    <string name="except">Except</string>
    <string name="name_customer">Name Customer</string>
    <string name="quantity_txt">Quantity</string>
    <string name="accept1">Accept</string>
</resources>